--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,12 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/top/index">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+          <% if user_signed_in? %>
+            <li><%= link_to 'Logout', destroy_user_session_path, :method=> 'delete' %></li>
+          <% else %>
+            <li><%= link_to 'Log In', new_user_session_path %> </li>
+            <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+          <% end %>
       </div>
     </div>
   </nav>
@@ -50,7 +53,7 @@
       <div class="col-lg-3">
         <div class="well sidebar-nav">
           <h3>Sidebar</h3>
-          <ul class="nav nav-list">
+          <ul class="nav nav-list">           
             <li><%= link_to "Ebook Category", categories_path  %></li>              
             <li><%= link_to "Course", courses_path  %></li>
             <li><%= link_to "Room", rooms_path  %></li>
@@ -60,6 +63,7 @@
             <li><%= link_to "Teaching Schedule", teaching_schedules_path  %></li>
             <li><%= link_to "Subject", subjects_path  %></li>
             <li><%= link_to "Section", sections_path  %></li>
+
           </ul>
         </div><!--/.well -->
       </div><!--/span-->
