--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -2,14 +2,14 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :section_id %>
-    <%= f.input :subject_id %>
+    <%= f.input :section_id, :as => :select, :collection=> Section.all.map { |s| [s.section_name,s.id]  } %>
+    <%= f.input :subject_id, :as => :select, :collection=> Subject.all.map { |s| [s.subject_name,s.id]  } %>
     <%= f.input :room_id %>
-    <%= f.input :lecturer_id %>
+    <%= f.input :lecturer_id, :as => :select, :collection=> Lecturer.all.map { |l| [l.lecturer_name,l.id]  } %>
     <%= f.input :start_time %>
     <%= f.input :end_time %>
     <%= f.input :description %>
-    <%= f.input :staff_id %>
+    <%= f.input :staff_id, :as => :select, :collection=> Staff.all.map { |s| [s.staff_name,s.id]  } %>
   </div>
 
   <div class="form-actions">
