--- a/app/views/timetables/show.html.erb
+++ b/app/views/timetables/show.html.erb
@@ -12,16 +12,16 @@
 
 <dl class="dl-horizontal">
   <dt>Section:</dt>
-  <dd><%= @timetable.section_id %></dd>
+  <dd><%= @timetable.section.section_name %></dd>
 
   <dt>Subject:</dt>
-  <dd><%= @timetable.subject_id %></dd>
+  <dd><%= @timetable.subject.subject_name %></dd>
 
   <dt>Room:</dt>
   <dd><%= @timetable.room_id %></dd>
 
   <dt>Lecturer:</dt>
-  <dd><%= @timetable.lecturer_id %></dd>
+  <dd><%= @timetable.lecturer.lecturer_name %></dd>
 
   <dt>Start time:</dt>
   <dd><%= @timetable.start_time %></dd>
