--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,12 @@
           <ul class="nav nav-list">           
             <li><%= link_to "Ebook Category", categories_path  %></li>              
             <li><%= link_to "Course", courses_path  %></li>
+            <li><%= link_to "Ebook", ebooks_path  %></li>
+            <li><%= link_to "Exam List", exam_lists_path  %></li>
+            <li><%= link_to "Forum", forums_path  %></li>
+            <li><%= link_to "Result", results_path  %></li>
+            <li><%= link_to "Register", student_registers_path  %></li>
+            <li><%= link_to "Timetable", timetables_path  %></li>
             <li><%= link_to "Room", rooms_path  %></li>
             <li><%= link_to "Student", students_path  %></li>
             <li><%= link_to "Staff", staffs_path  %></li>
