--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -6,6 +6,28 @@
   <h1>Listing forums</h1>
 </div>
 
+ <div class="panel panel-primary" id="accordion">
+  <div class="panel-heading">
+    <%= link_to '#search-form', 'data-toggle' => "collapse", 'data-parent' => "#accordion", 'aria-expanded' => "true", 'aria-controls' => "search-form" do %>
+    <h5 class="panel-layout"><b>Search Information</b></h5>
+    <% end %>
+  </div>
+
+  <div class="panel-body panel-collapse collaspe in" id="search-form">
+    <%= form_tag forums_path, :method => 'get' do %>
+      <div class="form-group">
+        <div class ="col-md-12 search-space">
+          <%= label :title, "Title" %> 
+          <%= text_field_tag :title ,params[:title], :class => "form-control" %>
+        </div>
+        <div class="col-md-10">
+          <%= submit_tag :search, :class => "btn btn-default btn-primary" %>
+        </div>
+      </div>
+    <% end %>
+  </div> <!-- panel body -->
+</div> <!-- panel -->
+
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
