--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -15,13 +15,13 @@
   <dd><%= @result.exam_id %></dd>
 
   <dt>Student:</dt>
-  <dd><%= @result.student_id %></dd>
+  <dd><%= @result.student.student_name %></dd>
 
-  <dt>Setion:</dt>
-  <dd><%= @result.setion_id %></dd>
+  <dt>Section:</dt>
+  <dd><%= @result.section.section_name %></dd>
 
   <dt>Subject:</dt>
-  <dd><%= @result.subject_id %></dd>
+  <dd><%= @result.subject.subject_name %></dd>
 
   <dt>Result:</dt>
   <dd><%= @result.result %></dd>
