--- a/app/views/student_registers/_form.html.erb
+++ b/app/views/student_registers/_form.html.erb
@@ -2,14 +2,14 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :student_id %>
-    <%= f.input :section_id %>
+    <%= f.input :student_id, :as => :select, :collection=> Student.all.map { |s| [s.student_name,s.id]  }  %>
+    <%= f.input :section_id, :as => :select, :collection=> Section.all.map { |s| [s.section_name,s.id]  } %>
     <%= f.input :tution_fees %>
     <%= f.input :exam_fees %>
     <%= f.input :register_date %>
     <%= f.input :complete_tf %>
     <%= f.input :complete_ef %>
-    <%= f.input :staff_id %>
+    <%= f.input :staff_id, :as => :select, :collection=> Staff.all.map { |s| [s.staff_name,s.id]  } %>
     <%= f.input :remark %>
   </div>
 
