--- a/app/views/student_registers/index.html.erb
+++ b/app/views/student_registers/index.html.erb
@@ -6,6 +6,33 @@
   <h1>Listing student_registers</h1>
 </div>
 
+<div class="panel panel-primary" id="accordion">
+  <div class="panel-heading panel-layout">
+    <%= link_to '#search-form', 'data-toggle' => "collapse", 'data-parent' => "#accordion", 'aria-expanded' => "true", 'aria-controls' => "search-form" do %>
+    <h5 class="panel-layout"><b>Search Information</b></h5>
+    <% end %>
+  </div>
+
+  <div class="panel-body panel-collapse collaspe in" id="search-form">
+    <%= form_tag student_registers_path, :method => 'get' do %>
+      <div class="form-group">
+        <div class ="col-md-6 search-space">
+          <%= label :student_id, "Student Name" %> 
+          <%= select_tag :student_id, options_from_collection_for_select(Student.all, :id, :student_name, params[:student_id]), include_blank: true, :class => 'form-control' %>
+        </div>
+        <div class ="col-md-6 search-space">
+          <%= label :section_id, "Section No" %> 
+          <%= select_tag :section_id, options_from_collection_for_select(Section.all, :id, :section_name, params[:section_id]), include_blank: true, :class => 'form-control' %>
+        </div>
+        <div class="col-md-10">
+          <%= submit_tag :search, :class => "btn btn-default btn-primary" %>
+        </div>
+      </div>
+
+    <% end %>
+  </div> <!-- panel body -->
+</div> <!-- panel -->
+
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
@@ -23,8 +50,8 @@
 
     <tbody>
       <%= content_tag_for(:tr, @student_registers) do |student_register| %>
-            <td><%= student_register.student_id %></td>
-            <td><%= student_register.section_id %></td>
+            <td><%= student_register.student.student_name %></td>
+            <td><%= student_register.section.section_name %></td>
             <td><%= student_register.register_date %></td>
             <td><%= student_register.complete_tf %></td>
             <td><%= student_register.complete_ef %></td>
