--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :reg_no %>
     <%= f.input :profile %>
     <%= f.input :gender %>
-    <%= f.input :dob, as: :string, input_html: {class: :datepicker} %>
+    <%= f.input :dob, :as => :string, input_html: {class: :datepicker} %>
     <%= f.input :nrc %>
     <%= f.input :address %>
     <%= f.input :email %>
