--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :section_id, :as => :select, :collection=> Section.all.map { |s| [s.section_name,s.id]  } %>
     <%= f.input :subject_id, :as => :select, :collection=> Subject.all.map { |s| [s.subject_name,s.id]  } %>
-    <%= f.input :room_id %>
+    <%= f.input :room_id, :as => :select, :collection=> Room.all.map { |r| [r.no, r.id] } %>
     <%= f.input :lecturer_id, :as => :select, :collection=> Lecturer.all.map { |l| [l.lecturer_name,l.id]  } %>
     <%= f.input :start_time %>
     <%= f.input :end_time %>
