--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? %>
+<% if lecturer_signed_in? %>
 <h2> Teaching Schedule for Lecturer</h2>
 <div class="table-responsive">
   <table class="table table-striped table-hover">
