--- a/app/views/exam_lists/_form.html.erb
+++ b/app/views/exam_lists/_form.html.erb
@@ -2,8 +2,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :title, :as => :select, :collection => ['Global Exam', 'Local Exam'] %>
     <%= f.input :course_id, :as => :select, :collection=> @courses.map { |c| [c.course_name,c.id]  } %>
-    <%= f.input :section_id, :as => :select, :collection=> @sections.map { |s| [s.section_name,s.id]  } %>
     <%= f.input :subject_id, :as => :select, :collection=> @subjects.map { |s| [s.subject_name,s.id]  } %>
     <%= f.input :exam_date, as: :string, input_html: { class: :datepicker }  %>
   </div>
@@ -12,3 +12,18 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.datepicker').datepicker({format: 'dd-mm-yyyy'});
+  });
+
+  jQuery("#exam_list_course_id").change(function(){
+    var course=$('#exam_list_course_id').val();
+    $.ajax({
+      type: "POST",
+      url: "http://"+location.host+"/dynamic_subject/"+ course
+    });
+  });
+
+</script>
