--- a/app/views/exam_lists/show.html.erb
+++ b/app/views/exam_lists/show.html.erb
@@ -11,6 +11,9 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt>Exam Title:</dt>
+  <dd><%= @exam_list.title %></dd>
+
   <dt>Course:</dt>
   <dd><%= @exam_list.course.course_name %></dd>
 
@@ -21,6 +24,6 @@
   <dd><%= @exam_list.subject.subject_name %></dd>
 
   <dt>Exam date:</dt>
-  <dd><%= @exam_list.exam_date %></dd>
+  <dd><%= @exam_list.exam_date.strftime("%d-%m-%Y") %></dd>
 
 </dl>
