--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,23 +61,9 @@
     <div class="row">  
       <div class="col-lg-3">
         <div class="well sidebar-nav">
-          <h3>Sidebar</h3>
-          <ul class="nav nav-list">           
-            <li><%= link_to "Ebook Category", categories_path  %></li>              
-            <li><%= link_to "Course", courses_path  %></li>
-            <li><%= link_to "Ebook", ebooks_path  %></li>
-            <li><%= link_to "Exam List", exam_lists_path  %></li>
-            <li><%= link_to "Forum", forums_path  %></li>
-            <li><%= link_to "Result", results_path  %></li>
-            <li><%= link_to "Register", student_registers_path  %></li>
-            <li><%= link_to "Timetable", timetables_path  %></li>
-            <li><%= link_to "Room", rooms_path  %></li>
-            <li><%= link_to "Student", students_path  %></li>
-            <li><%= link_to "Staff", staffs_path  %></li>
-            <li><%= link_to "Lecturer", lecturers_path  %></li>
-            <li><%= link_to "Teaching Schedule", teaching_schedules_path  %></li>
-            <li><%= link_to "Subject", subjects_path  %></li>
-            <li><%= link_to "Section", sections_path  %></li>
+          <ul class="nav nav-list">         
+            <%= render 'layouts/navigation' %>  
+
 
           </ul>
         </div><!--/.well -->
