--- a/app/views/lecturers/_form.html.erb
+++ b/app/views/lecturers/_form.html.erb
@@ -16,3 +16,9 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.datepicker').datepicker({format: 'dd-mm-yyyy'});
+  });
+</script>
