--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -6,12 +6,20 @@
     <%= f.input :course_id, :as => :select, :collection=> @courses.map { |c| [c.course_name,c.id]  } %>
     <%= f.input :start_date, as: :string, input_html: {class: :datepicker} %>
     <%= f.input :end_date, as: :string, input_html: {class: :datepicker} %>
-    <%= f.input :start_time %>
+    <%= f.input :start_time, as: :string, input_html: {class: :timepicker} %>
     <%= f.input :end_time %>
-    <%= f.input :description %>
+    <%= f.input :description, input_html: {class: :timepicker} %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.datepicker').datepicker({format: 'dd-mm-yyyy'});
+    $('.timepicker').timepicker();
+  });
+</script>
+
