--- a/app/views/student_registers/_form.html.erb
+++ b/app/views/student_registers/_form.html.erb
@@ -1,12 +1,12 @@
 <%= simple_form_for(@student_register) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :student_id, :as => :select, :collection=> Student.all.map { |s| [s.student_name,s.id]  }  %>
+  <div class="form-inputs"> 
+    <%= f.input :student_id %>
     <%= f.input :section_id, :as => :select, :collection=> Section.all.map { |s| [s.section_name,s.id]  } %>
     <%= f.input :tution_fees %>
     <%= f.input :exam_fees %>
-    <%= f.input :register_date %>
+    <%= f.input :register_date, as: :string, input_html: { class: :datepicker } %>
     <%= f.input :complete_tf %>
     <%= f.input :complete_ef %>
     <%= f.input :staff_id, :as => :select, :collection=> Staff.all.map { |s| [s.staff_name,s.id]  } %>
@@ -17,3 +17,10 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.datepicker').datepicker({format: 'dd-mm-yyyy'});
+  });
+</script>
