--- a/app/views/student_registers/show.html.erb
+++ b/app/views/student_registers/show.html.erb
@@ -12,7 +12,7 @@
 
 <dl class="dl-horizontal">
   <dt>Student:</dt>
-  <dd><%= @student_register.student.student_name %></dd>
+  <dd><%= @student_register.student_id %></dd>
 
   <dt>Section:</dt>
   <dd><%= @student_register.section.section_name %></dd>
@@ -24,7 +24,7 @@
   <dd><%= @student_register.exam_fees %></dd>
 
   <dt>Register date:</dt>
-  <dd><%= @student_register.register_date %></dd>
+  <dd><%= @student_register.register_date.strftime("%d-%m-%Y") %></dd>
 
   <dt>Complete tf:</dt>
   <dd><%= @student_register.complete_tf %></dd>
