--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,6 +9,7 @@
     <ul class="collapse nav nav-list" id="collapse1">
         <li> <%= link_to "・Lecturer", lecturers_path %></li>
         <li> <%= link_to "・Staff", staffs_path %></li>
+        <li> <%= link_to "・User", users_path %></li>
     </ul>
   <!-- Teaching Staff -->
 </li>
