--- a/app/assets/stylesheets/bootstrap-generators.scss
+++ b/app/assets/stylesheets/bootstrap-generators.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-variables.scss";
 @import "bootstrap-sprockets.scss";
 @import "bootstrap";
-
+@import "bootstrap-timepicker";
 
 body {
   padding-top: $navbar-height + 10px;
