--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -1,14 +1,16 @@
 <%= simple_form_for(@section) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs ">
     <%= f.input :section_name %>
-    <%= f.input :course_id, :as => :select, :collection=> @courses.map { |c| [c.course_name,c.id]  } %>
+    <%= f.input :course_id, :as => :select, :collection=> Course.all.map { |c| [c.course_name,c.id]  } %>
     <%= f.input :start_date, as: :string, input_html: {class: :datepicker} %>
     <%= f.input :end_date, as: :string, input_html: {class: :datepicker} %>
-    <%= f.input :start_time, as: :string, input_html: {class: :timepicker} %>
-    <%= f.input :end_time %>
-    <%= f.input :description, input_html: {class: :timepicker} %>
+    <%= f.label :start_time %></br>
+    <%= f.time_select :start_time %></br></br>
+    <%= f.label :end_time %></br>
+    <%= f.time_select :end_time, input_html: { class: :bootstrap_timepicker } %></br></br>
+    <%= f.input :description %>
   </div>
 
   <div class="form-actions">
